infrastructure/cdk.out/test-stack.template.json
{
 "Resources": {
  "simpleinstance1role9EEDA67C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-instance-1-role/Resource"
   }
  },
  "simpleloadbalancerAC90B3BA": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "simpleloadbalancerSecurityGroupD3DBDF90",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     "subnet-0be5c8bb4b68322b0",
     "subnet-012fa70abd6d0544e",
     "subnet-0e72f4560a07d5237"
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-load-balancer/Resource"
   }
  },
  "simpleloadbalancerSecurityGroupD3DBDF90": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB teststacksimpleloadbalancerAB2CE04A",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": "vpc-0335b61a81f638466"
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-load-balancer/SecurityGroup/Resource"
   }
  },
  "simpleloadbalancerSecurityGrouptoteststacksimpleinstance1sg9287667280FA42DECF": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "simpleloadbalancerSecurityGroupD3DBDF90",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "simpleinstance1sg1026C7DF",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-load-balancer/SecurityGroup/to teststacksimpleinstance1sg92876672:80"
   }
  },
  "simpleloadbalancerALBListenerHttp336CD0BF": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "simpleloadbalancerALBListenerHttpTargetGroupGroupF353C467"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "simpleloadbalancerAC90B3BA"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-load-balancer/ALBListenerHttp/Resource"
   }
  },
  "simpleloadbalancerALBListenerHttpTargetGroupGroupF353C467": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/actuator/health",
    "HealthCheckPort": "80",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "VpcId": "vpc-0335b61a81f638466"
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-load-balancer/ALBListenerHttp/TargetGroupGroup/Resource"
   }
  },
  "simpleinstance1sg1026C7DF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "test-stack/simple-instance-1-sg",
    "GroupName": "simple-instance-1-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allows SSH access from Internet",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allows HTTP access from Internet",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allows HTTPS access from Internet",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": "vpc-0335b61a81f638466"
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-instance-1-sg/Resource"
   }
  },
  "simpleinstance1sgfromteststacksimpleloadbalancerSecurityGroup7A541B6F8010B45FD4": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "simpleinstance1sg1026C7DF",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "simpleloadbalancerSecurityGroupD3DBDF90",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/simple-instance-1-sg/from teststacksimpleloadbalancerSecurityGroup7A541B6F:80"
   }
  },
  "AutoScalingGroupInstanceProfile342FAC7C": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "simpleinstance1role9EEDA67C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/AutoScalingGroup/InstanceProfile"
   }
  },
  "AutoScalingGroupLaunchConfigDEEB160C": {
   "Type": "AWS::AutoScaling::LaunchConfiguration",
   "Properties": {
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "IamInstanceProfile": {
     "Ref": "AutoScalingGroupInstanceProfile342FAC7C"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "simpleinstance1sg1026C7DF",
       "GroupId"
      ]
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "simpleinstance1role9EEDA67C"
   ],
   "Metadata": {
    "aws:cdk:path": "test-stack/AutoScalingGroup/LaunchConfig"
   }
  },
  "AutoScalingGroupASG804C35BE": {
   "Type": "AWS::AutoScaling::AutoScalingGroup",
   "Properties": {
    "MaxSize": "2",
    "MinSize": "1",
    "HealthCheckType": "EC2",
    "LaunchConfigurationName": {
     "Ref": "AutoScalingGroupLaunchConfigDEEB160C"
    },
    "Tags": [
     {
      "Key": "code-deploy",
      "PropagateAtLaunch": true,
      "Value": "wedding-backend"
     },
     {
      "Key": "Name",
      "PropagateAtLaunch": true,
      "Value": "test-stack/AutoScalingGroup"
     }
    ],
    "TargetGroupARNs": [
     {
      "Ref": "simpleloadbalancerALBListenerHttpTargetGroupGroupF353C467"
     }
    ],
    "VPCZoneIdentifier": [
     "subnet-0be5c8bb4b68322b0",
     "subnet-012fa70abd6d0544e",
     "subnet-0e72f4560a07d5237"
    ]
   },
   "UpdatePolicy": {
    "AutoScalingScheduledAction": {
     "IgnoreUnmodifiedGroupSizeProperties": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/AutoScalingGroup/ASG"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31QTU/DMAz9LbunYewwuMKE0NAkppY78jK3M0uTynGGUNX/TtpuUwGJk/0+ZPt5oZf3ej6Dz5CZ/TGztNNtIWCOKsfgIxtUSXtvCWrd5t6iWpXuUtcuCDiDW/YlWewUWghCxnrY78AmiVx1Wuj2oWksGRDybpO0x0FD7mf8wFMfBUF39lz6if4GXKE8s49Nb5nAdIZJOws0kUm+rpb/iaeKMYQ/9NoNfKcgig8GbEqU8iRQjOA6bQPRmcPKu5KqyMONPf3b2nU9uwWGGmWM9xqliTI89vzzTr3ACW5u7/RcL2cfgSjj6IRq1PlYvwEpEJsxuAEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "test-stack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "myAsgRef": {
   "Description": "Name of ASG in stack",
   "Value": {
    "Ref": "AutoScalingGroupASG804C35BE"
   },
   "Export": {
    "Name": "myAsg"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
